# bcn_decoder_tester

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  launch.vs.json  readme.md
libs/: sal.h
libs/bcdec_opt/: bcdec_opt.h
libs/etcpak/: BlockData.cpp  BlockData.hpp
libs/mesa/src/mesa/main/: macros.h  mesa_private.h  texcompress_bptc_tmp.h  texcompress_s3tc_tmp.h
libs/mesa/src/util/: compiler.h  half_float.c  half_float.h  rgtc.c  rgtc.h  texcompress_rgtc_tmp.h
libs/swiftshader/: BC_Decoder.cpp  Math.hpp
src/: dds_loader.cpp  dds_loader.h  main.cpp
test_images/: _hashes.txt  frymire_bc1.dds  frymire_bc3.dds  frymire_bc4.dds  frymire_bc5.dds  frymire_bc6h.dds  frymire_bc7.dds  kodim23_bc1.dds  kodim23_bc7.dds  webp_gallery_3_bc3.dds  webp_gallery_3_bc7.dds
test_images/ambientcg/: Ground037_AO_bc4.dds  Ground037_Color_bc1.dds  Ground037_Color_bc3.dds  Ground037_Color_bc7.dds  Ground037_Disp_bc4.dds  Ground037_N_bc5.dds  IndoorHDRI001.dds  IndoorHDRI004.dds  ManholeCover008_AO_bc4.dds  ManholeCover008_Color_bc1.dds  ManholeCover008_Color_bc3.dds  ManholeCover008_Color_bc7.dds  ManholeCover008_Metal_bc4.dds  ManholeCover008_N_bc5.dds  OutdoorHDRI001.dds
